# remani-diffusion

./: PROJECT_PROGRESS.md
src/REMANI-Planner/diffusion_arm_planner/: CMakeLists.txt  package.xml
src/REMANI-Planner/diffusion_arm_planner/scripts/: diffusion_arm_planner_node.py
src/REMANI-Planner/remani_diffusion_msgs/: CMakeLists.txt  package.xml
src/REMANI-Planner/remani_diffusion_msgs/srv/: DiffusionArmPlan.srv
src/REMANI-Planner/remani_planner/plan_manage/: CMakeLists.txt  package.xml
src/REMANI-Planner/remani_planner/plan_manage/config/: remani_planner_param.yaml
src/REMANI-Planner/remani_planner/plan_manage/include/plan_manage/: planner_manager.h
src/REMANI-Planner/remani_planner/plan_manage/launch/: advanced_param_sim.xml
src/REMANI-Planner/remani_planner/plan_manage/src/: planner_manager.cpp
src/mpd-public/scripts/inference/: inference.py
