<?xml version="1.0"?>
<package format="2">
  <name>diffusion_arm_planner</name>
  <version>0.0.1</version>
  <description>Dummy ROS service node for diffusion-conditioned manipulator trajectory planning.</description>

  <maintainer email="yifu@example.com">yifu</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>remani_diffusion_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>remani_diffusion_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>remani_diffusion_msgs</exec_depend>
</package>

